--- a/Pipfile
+++ b/Pipfile
@@ -16,8 +16,8 @@ pylint-report = "==0.1.0"
 pytest = "==6.2.1"
 pytest-html = "==3.1.1"
 pytest-cov = "==2.10.1"
-moto = "*"
-pyyaml = "*"
+moto = "==2.0.5"
+pyyaml = "==5.4.1"
 
 [scripts]
 test = "python -m unittest discover"
