new name and key

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey = syngenta-digital_dbv-python
-sonar.projectName = dbv-python
+sonar.projectKey = syngenta-digital_package-python-dbv
+sonar.projectName = package-python-dbv
 sonar.projectVersion = 0.0.1
 
 sonar.sources = syngenta_digital_dbv
