--- a/tests/local/databases.yml
+++ b/tests/local/databases.yml
@@ -26,3 +26,12 @@ services:
             POSTGRES_USER: root
             POSTGRES_PASSWORD: Lq4nKg&&TRhHv%7z
             POSTGRES_DB: dbv-reset-postgis
+    mongo:
+        image: mongo
+        container_name: mongo-local
+        restart: on-failure
+        ports:
+            - 27017:27017
+        environment:
+            MONGO_INITDB_ROOT_USERNAME: root
+            MONGO_INITDB_ROOT_PASSWORD: Lq4nKg&&TRhHv%7z
